--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width" />
-    <script type="module" src="suic-navbar.js"></script>
+    <title>Artur Rios</title>
+    <script type="module" src="index.js"></script>
   </head>
-  <body style="margin: 0; box-sizing: border-box">
-    <suic-navbar title="Artur Rios"></suic-navbar>
+  <body>
+    <div>
+      <suic-navbar title="Artur Rios"></suic-navbar>
+    </div>
 
     <script>
       const navbarItems = [
