--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Artur Rios</title>
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="index.css" />
     <script type="module" src="index.js"></script>
   </head>
   <body>
